# fuoco

./: .gitignore  Cargo.toml  README.md  script.sh
src/: main.rs
templates/aws/: main.tf
templates/gcp/: main.tf
templates/hetzner/: main.tf
terraform/aws/: main.tf
terraform/gcp/: main.tf
terraform/hetzner/: main.tf
