[package]
name = "fuoco"
version = "0.0.1"
edition = "2024"
authors = ["Andrea Reni <mail@x71c9.com>"]
description = "A CLI tool for provisioning VMs on AWS, GCP, and Hetzner through a unified interface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/x71c9/fuoco"
readme = "README.md"
keywords = [
  "cli",
  "cloud",
  "vm",
  "aws",
  "gcp",
  "hetzner",
  "provisioning",
  "automation",
  "infrastructure",
]
categories = [
  "command-line-utilities",
  "development-tools"
]

[dependencies]
clap = { version = "4", features = ["derive"] }

